--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,18 +17,17 @@ jobs:
       - name: extract id
         id: extract-id
         run: |
-          if [[ $GITHUB_HEAD_REF =~ ^ch[0-9] ]]; \
+          if [[ $GITHUB_HEAD_REF =~ ^ch([0-9]+) ]]; \
           then \
-            id=$(echo $GITHUB_HEAD_REF | cut -d'/' -f 1); \
-            echo "::set-output name=clubhouse-id::$id"; \
+            echo "::set-output name=clubhouse-id::${BASH_REMATCH[1]}"; \
           fi
 
       - name: add pr link in comment
-        if: steps.extract-id.output.clubbouse-id != ''
+        if: steps.extract-id.outputs.clubhouse-id != ''
         uses: mshick/add-pr-comment@master
         with:
           message: |
             ## Related issue 
-            [${{ steps.extract-id.output.clubbouse-id }}](https://app.clubhouse.io/takeshape/story/)
+            [${{ steps.extract-id.outputs.clubhouse-id }}](https://app.clubhouse.io/takeshape/story/)
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           repo-token-user-login: "github-actions[bot]"
