--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -20,3 +20,4 @@ jobs:
         if: github.event.pull_request.labels != ''
         run: |
           echo "::error ::PR must be labeled"
+          exit 1
