--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -17,7 +17,7 @@ jobs:
           echo "$GITHUB_CONTEXT"
           
       - name: check for release label
-        if: github.event.pull_request.labels != ''
+        if: github.event.pull_request.labels == []
         run: |
           echo "::error ::PR must be labeled"
           exit 1
