--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   pr-label-check:
     name: Release Label Present
-    if: github.event.action == 'synchronize' || github.event.action == 'review_requested'
+    if: github.event.action == 'synchronize' || github.event.action == 'review_requested' || github.event.action == 'labeled' || github.event.action == 'unlabeled'
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
