--- a/.github/workflows/files-sync.yml
+++ b/.github/workflows/files-sync.yml
@@ -15,15 +15,35 @@ on:
       - main
 
 env:
+  # TARGET_REPOS_PM: |
+  #   takeshape/shape-form
+  #   takeshape/takeshape
+  #   takeshape/takeshape-email
+  #   takeshape/takeshape-routing
+  #   takeshape/takeshape-samples
+  #   takeshape/takeshape-skyword
+  #   takeshape/takeshape.io
+  #   takeshape/vm-nunjucks
+  # FILE_PATTERNS_PM: |
+  #   ^.github/workflows/_pm*
+  #   ^.github/workflows/_release_pull-request-label-check.yml
+  #   ^.github/release-drafter.yml
+  #   ^.github/auto.json
+  #   ^.github/pr-labeler.yml
+  #   ^.github/scripts/*
+  # # Moving toward bundles of functionality
+  # TARGET_REPOS_RELEASE: |
+  #   takeshape/takeshape-gatsby
+  # FILE_PATTERNS_RELEASE: |
+  #   ^.github/workflows/_pm_issues.yml
+  #   ^.github/workflows/_pm_pull-request.yml
+  #   ^.github/workflows/_release*
+  #   ^.github/release-drafter.yml
+  #   ^.github/auto.json
+  #   ^.github/pr-labeler.yml
+  #   ^.github/scripts/*
   TARGET_REPOS_PM: |
-    takeshape/shape-form
-    takeshape/takeshape
-    takeshape/takeshape-email
-    takeshape/takeshape-routing
-    takeshape/takeshape-samples
-    takeshape/takeshape-skyword
-    takeshape/takeshape.io
-    takeshape/vm-nunjucks
+    takeshape/takeshape-starter-auth0-stripe
   FILE_PATTERNS_PM: |
     ^.github/workflows/_pm*
     ^.github/workflows/_release_pull-request-label-check.yml
@@ -33,7 +53,7 @@ env:
     ^.github/scripts/*
   # Moving toward bundles of functionality
   TARGET_REPOS_RELEASE: |
-    takeshape/takeshape-gatsby
+    takeshape/takeshape-starter-auth0-stripe
   FILE_PATTERNS_RELEASE: |
     ^.github/workflows/_pm_issues.yml
     ^.github/workflows/_pm_pull-request.yml
@@ -55,14 +75,16 @@ jobs:
       - name: Sync PM Files
         uses: adrianjost/files-sync-action@v1.1.0
         with:
+          SRC_ROOT: 'sync'
           FILE_PATTERNS: ${{ env.FILE_PATTERNS_PM }}
           TARGET_REPOS: ${{ env.TARGET_REPOS_PM }}
           GITHUB_TOKEN: ${{ secrets.LABEL_SYNC_TOKEN }}
           COMMIT_MESSAGE: ${{ env.COMMIT_MESSAGE }}
 
       - name: Sync Release Files
-        uses: adrianjost/files-sync-action@v1.1.0
+        uses: adrianjost/files-sync-action@v1.5.0
         with:
+          SRC_ROOT: 'sync'
           FILE_PATTERNS: ${{ env.FILE_PATTERNS_RELEASE }}
           TARGET_REPOS: ${{ env.TARGET_REPOS_RELEASE }}
           GITHUB_TOKEN: ${{ secrets.LABEL_SYNC_TOKEN }}
