--- a/.github/workflows/files-sync.yml
+++ b/.github/workflows/files-sync.yml
@@ -39,23 +39,24 @@ env:
   TARGET_REPOS_PM: |
     takeshape/takeshape-starter-auth0-stripe
   FILE_PATTERNS_PM: |
-    ^.github/workflows/_pm*
-    ^.github/workflows/_release_pull-request-label-check.yml
-    ^.github/release-drafter.yml
-    ^.github/auto.json
-    ^.github/pr-labeler.yml
-    ^.github/scripts/*
+    .github/workflows/_pm_issues.yml
+    .github/workflows/_pm_pull-request.yml
+    .github/workflows/_release_pull-request-label-check.yml
+    .github/release-drafter.yml
+    .github/auto.json
+    .github/pr-labeler.yml
+    .github/scripts/*
   # Moving toward bundles of functionality
   TARGET_REPOS_RELEASE: |
     takeshape/takeshape-starter-auth0-stripe
   FILE_PATTERNS_RELEASE: |
-    ^.github/workflows/_pm_issues.yml
-    ^.github/workflows/_pm_pull-request.yml
-    ^.github/workflows/_release*
-    ^.github/release-drafter.yml
-    ^.github/auto.json
-    ^.github/pr-labeler.yml
-    ^.github/scripts/*
+    .github/workflows/_pm_issues.yml
+    .github/workflows/_pm_pull-request.yml
+    .github/workflows/_release*
+    .github/release-drafter.yml
+    .github/auto.json
+    .github/pr-labeler.yml
+    .github/scripts/*
   COMMIT_MESSAGE: "Update file(s) from %SRC_REPO% [skip ci]"
 
 jobs:
@@ -69,7 +70,7 @@ jobs:
       - name: Sync PM Files
         uses: adrianjost/files-sync-action@v1.5.0
         with:
-          SRC_ROOT: '/sync'
+          SRC_ROOT: 'sync'
           FILE_PATTERNS: ${{ env.FILE_PATTERNS_PM }}
           TARGET_REPOS: ${{ env.TARGET_REPOS_PM }}
           GITHUB_TOKEN: ${{ secrets.LABEL_SYNC_TOKEN }}
@@ -78,7 +79,7 @@ jobs:
       - name: Sync Release Files
         uses: adrianjost/files-sync-action@v1.5.0
         with:
-          SRC_ROOT: '/sync'
+          SRC_ROOT: 'sync'
           FILE_PATTERNS: ${{ env.FILE_PATTERNS_RELEASE }}
           TARGET_REPOS: ${{ env.TARGET_REPOS_RELEASE }}
           GITHUB_TOKEN: ${{ secrets.LABEL_SYNC_TOKEN }}
